--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@nuxtjs/axios": "5.0.0",
     "cross-env": "5.2.0",
-    "koa": "2.5.2",
+    "express": "4.16.3",
     "nuxt": "2.0.0",
     "vue-styled-components": "1.4.3"
   },
