--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-vue",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Sample Vue.js Project",
   "author": "Recep Köseoğlu",
   "private": true,
@@ -29,7 +29,9 @@
     "eslint-loader": "2.0.0",
     "eslint-plugin-prettier": "2.6.2",
     "eslint-plugin-vue": "4.0.0",
+    "node-sass": "4.11.0",
     "nodemon": "1.11.0",
-    "prettier": "1.14.3"
+    "prettier": "1.14.3",
+    "sass-loader": "7.1.0"
   }
 }
